--- a/app/ui/styles/scss/main.scss
+++ b/app/ui/styles/scss/main.scss
@@ -1,163 +1,191 @@
 /////////////////////////////////////header///////////////////////////////////
 
-.navbar-default{
-	background-image: none;
-	background-color: #C8b485;
-	border-radius: 0;
-	margin-bottom: 0;
-	border: none;
-}
+header.container-fluid{
+	.row{
+		max-height: 60px;	
 
-.navbar-toggle {
-	display: inline-block;
-	border: none;
-	color: #453c25;
-	background-color: #C8b485 !important;
-	.icon-bar {
-		position: relative;
-		background-color: #453c25 !important; 
-	}
-	&:hover{
-		.icon-bar:first-child{
-			transition: all 500ms ease-in-out;
-			top: -1px;
-		}
-		.icon-bar:last-child{
-			transition: all 500ms ease-in-out;
-			top: 1px;
-		} 
-	
-	}	
-}
 
-.left-side-menu-wrap {
-	width: 340px;
-	position: absolute;
-	left: 0;
+		nav.navbar-default{
+			height: 50px;
+			background-image: none;
+			background-color: #C8b485;
+			border-radius: 0;
+			margin-bottom: 0;
+			border: none;
+		}
+		.content-header{
 
-	.header-logo {
-		width: 100%;
-		height: 100%;
-		background: url('../../../ui/uploads/overview-icon.png') 100% 100% no-repeat;
-	}
-}
+			&.collapse.in {
+						left: 360px;
+					}
 
-.btn-overview {
-	width: 140px;
-	background-color: #C8b485;
-	font-family: "OpenSans";
-  	font-size: 16px;
-	color: #443b25;
-	box-shadow: none;
-	border-radius: 0;
-	border-top: none;
-	border-bottom: none;
-	border-left: 1px solid #453c25;
-	border-right: 1px solid #453c25;
-	padding: 14px 0;
-	margin-right: -4px;
-	&.active {
-		background-color: #d2c29b;
-		box-shadow: none;
-		font-weight: bold;
-	}
-	&:hover{
-		background-color: #d3c39d;
-	}
-	&:active:focus{
-		outline: none;	
-	}
-	&.active:focus{
-		outline: none;
-	}
-	&:focus{
-		outline: none;	
-	}
-	.overview-icon {
-		width: 20px;
-		height: 14px;
-		position: absolute;
-		top: 15px;
-		left: 87px;
-		background-image: url('../../../ui/uploads/overview-icon.png');
-	}
-}
+			.navbar-toggle {
+				display: inline-block;
+				border: none;
+				color: #453c25;
+				background-color: #C8b485 !important;
+					
+					.icon-bar {
+					position: relative;
+					background-color: #453c25 !important; 
+				}
+				&:hover{
+					.icon-bar:first-child{
+						transition: all 500ms ease-in-out;
+						top: -1px;
+					}
+					.icon-bar:last-child{
+						transition: all 500ms ease-in-out;
+						top: 1px;
+					} 
+				
+				}	
+			}
 
-.btn-details {
-	width: 140px;
-	background-color: #C8b485;
-	font-family: "OpenSans";
-  	font-size: 16px;
-	color: #443b25;
-	box-shadow: none;
-	border-radius: 0;
-	border-top: none;
-	border-bottom: none;
-	border-right: 1px solid #453c25;
-	padding: 14px 0;
-	&.active {
-		background-color: #d2c29b;
-		box-shadow: none;
-		font-weight: bold;
-	}
-	&:hover{
-		background-color: #d3c39d;
-	}
-	&:active:focus{
-		outline: none;	
-	}
-	&:focus{
-		outline: none;	
-	}
-	.details-icon {
-		width: 20px;
-		height: 16px;
-		position: absolute;
-		left: 237px;
-		background-image: url('../../../ui/uploads/details-icon.png');
-	}
-}
-.header-socials-wrap {
-	padding: 12px 110px 0 0;
-	text-align: right;
-	.share-social-text {
-	  font-size: 15px;
-	  font-family: "OpenSans";
-	  color: #453c25;
-	}
-	.social-fb {
-		width: 35px;
-		height: 35px;
-		position: absolute;
-		right: 65px;
-		top: 6px;
-		border: none;
-		background-image: url('../../../ui/uploads/fb-icon.png');
-		background-color: transparent;
-		:hover{
-			cursor: pointer;
+			.left-side-menu-wrap {
+				width: 340px;
+				position: relative;
+				left: 0;
+				top: 60px;
+				background: linear-gradient(to right, #ff9900, #928053);
+				
+/* linear-gradient(to top, rgba(30,87,153,0), rgba(30,87,153,0.8), rgba(30,87,153,1),
+                      rgba(30,87,153,1), rgba(41,137,216,1), rgba(30,87,153,1), rgba(30,87,153,1),
+                      rgba(30,87,153,0.8),rgba(30,87,153,0))*/
+
+				.header-logo {
+				    width: inherit;
+					background: url('../../../ui/uploads/header-logo.png') 3% 50% no-repeat;
+				}
+
+				div{
+					width: inherit;
+					height: 60px;
+					background-color: #4c412d;
+					border-bottom: 1px solid #4c412d;
+				}
+			}
 		}
-		&:focus{
-			outline: none;
+
+		.btn-overview {
+			width: 140px;
+			background-color: #C8b485;
+			font-family: "OpenSans";
+		  	font-size: 16px;
+			color: #443b25;
+			box-shadow: none;
+			border-radius: 0;
+			border-top: none;
+			border-bottom: none;
+			border-left: 1px solid #453c25;
+			border-right: 1px solid #453c25;
+			padding: 14px 0;
+			margin-right: -4px;
+			&.active {
+				background-color: #d2c29b;
+				box-shadow: none;
+				font-weight: bold;
+			}
+			&:hover{
+				background-color: #d3c39d;
+			}
+			&:active:focus{
+				outline: none;	
+			}
+			&.active:focus{
+				outline: none;
+			}
+			&:focus{
+				outline: none;	
+			}
+			.overview-icon {
+				width: 20px;
+				height: 14px;
+				position: absolute;
+				top: 15px;
+				left: 87px;
+				background-image: url('../../../ui/uploads/overview-icon.png');
+			}
 		}
+
+		.btn-details {
+			width: 140px;
+			background-color: #C8b485;
+			font-family: "OpenSans";
+		  	font-size: 16px;
+			color: #443b25;
+			box-shadow: none;
+			border-radius: 0;
+			border-top: none;
+			border-bottom: none;
+			border-right: 1px solid #453c25;
+			padding: 14px 0;
+			&.active {
+				background-color: #d2c29b;
+				box-shadow: none;
+				font-weight: bold;
+			}
+			&:hover{
+				background-color: #d3c39d;
+			}
+			&:active:focus{
+				outline: none;	
+			}
+			&:focus{
+				outline: none;	
+			}
+			.details-icon {
+				width: 20px;
+				height: 16px;
+				position: absolute;
+				left: 237px;
+				background-image: url('../../../ui/uploads/details-icon.png');
+			}
+		}
+		.header-socials-wrap {
+			padding: 12px 110px 0 0;
+			text-align: right;
+			.share-social-text {
+			  font-size: 15px;
+			  font-family: "OpenSans";
+			  color: #453c25;
+			}
+			.social-fb {
+				width: 35px;
+				height: 35px;
+				position: absolute;
+				right: 65px;
+				top: 6px;
+				border: none;
+				background-image: url('../../../ui/uploads/fb-icon.png');
+				background-color: transparent;
+				:hover{
+					cursor: pointer;
+				}
+				&:focus{
+					outline: none;
+				}
+			}
+			.social-tw {
+				width: 35px;
+				height: 35px;
+				position: absolute;
+				right: 15px;
+		    	top: 6px;
+		    	border: none;
+				background-image: url('../../../ui/uploads/tw-icon.png');
+				background-color: transparent;
+				:hover{
+					cursor: pointer;
+				}
+				&:focus{
+					outline: none;	
+				}
+			}
+			
+		}
+
 	}
-	.social-tw {
-		width: 35px;
-		height: 35px;
-		position: absolute;
-		right: 15px;
-    	top: 6px;
-    	border: none;
-		background-image: url('../../../ui/uploads/tw-icon.png');
-		background-color: transparent;
-		:hover{
-			cursor: pointer;
-		}
-		&:focus{
-			outline: none;	
-		}
-	}
-	
 }
 
 /////////////////////////////////////////////////content-header//////////////////////////////////
