--- a/app/ui/views/details.html
+++ b/app/ui/views/details.html
@@ -33,94 +33,98 @@
       <nav class="navbar navbar-default">
         <div class="col-sm-6">
           <div class="content-header">
-            <div class="collapse panel-collapse left-side-menu-wrap" data-toggle="collapse" id="bs-example-navbar-collapse-1" aria-labelledby="bs-example-navbar-collapse-1">
-            <div class="panel-group" id="sidebar_menu" role="tablist" aria-multiselectable="true">
-              <div class="">
-                <div class="header-logo">
+            <div class="collapse panel-collapse left-side-menu-wrap" data-toggle="collapse" id="sidebar-accordion" aria-labelledby="sidebar-accordion">
+            <div class="left-side-menu-list" id="sidebar_menu" role="tablist" aria-multiselectable="true">
 
-                </div>
-              </div>
-              <div class="">
                 <div class="">
-                  <h5 class="panel-title">
-                    <a href="#">Itineraraies</a>
-                  </h5>
-                </div>
-              </div>
-              <div class="">
-                <div class="">
-                  <h5 class="panel-title">
-                    <a href="#">Contests</a>
-                  </h5>
-                </div>
-              </div>
-              <div class="">
-                <div class="" role="tab" id="user_profile">
-                  <h5 class="panel-title">
-                    <a href="#user_profile_list" role="button" data-toggle="collapse" aria-expended="true" aria-controls="user-profile">John Kennedy</a>
-                  </h5>
-                </div>
-                <div id="user_profile_list" class="panel-collapse collapse in" role="tabpanel"  aria-labelledby="user_profile" data-toggle="collapse">
-                  <div class="panel-body list-group">
-                    <ul class="">
-                      <li>
-                        <a href="">My itineraries</a>
-                      </li>
-                      <li>
-                        <a href="">My contests</a>
-                      </li>
-                      <li>
-                        <a href="">Settings</a>
-                      </li>
-                      <li>
-                        <a href="">Payments</a>
-                      </li>
-                      <li>
-                        <a href="">Log out</a>
-                      </li>
-                    </ul>
+                  <div class="header-logo">
                   </div>
                 </div>
-              </div>
-              <div class="">
-                <div class="" role="tab" id="user_profile">
-                  <h5 class="panel-title">
-                    <a href="#user_profile_msgs" role="button" data-toggle="collapse" aria-expended="true" aria-controls="user-profile">Messages</a>
-                  </h5>
-                </div>
-                <div id="user_profile_msgs" class="panel-collapse collapse in" role="tabpanel"  aria-labelledby="user_profile" data-toggle="collapse">
-                  <div class="panel-body list-group">
-                    <ul class="">
-                      <li>
-                        msg1
-                      </li>
-                      <li>
-                        My cvzx
-                      </li>
-                      <li>
-                        Ssdasd
-                      </li>
-                      <li>
-                       sdasdas
-                      </li>
-                      <li>
-                        asdqwe
-                      </li>
-                    </ul>
+                <div class="">
+                  <div class="menu-item-title">
+                    <h5 class="itineraries-title">
+                      <a href="#">Itineraraies</a>
+                    </h5>
                   </div>
                 </div>
-              </div>
+                <div class="">
+                  <div class="menu-item-title">
+                    <h5 class="contests-title">
+                      <a href="#">Contests</a>
+                    </h5>
+                  </div>
+                </div>
+
+                <div class="">
+                  <div class="" role="tab" id="user_profile">
+                    <h5 class="user-title">
+                      <span class="user-avatar"></span>
+                      <a href="#user_profile_list" role="button" data-toggle="collapse" aria-expended="false" aria-controls="user-profile">John Kennedy</a>
+                    </h5>
+                  </div>
+                  <div id="user_profile_list" class="panel-collapse collapse in" role="tabpanel"  aria-labelledby="user_profile" data-toggle="collapse">
+                    <div class="">
+                      <ul class="list-group">
+                        <li>
+                          <a href="">My itineraries</a>
+                        </li>
+                        <li>
+                          <a href="">My contests</a>
+                        </li>
+                        <li>
+                          <a href="">Settings</a>
+                        </li>
+                        <li>
+                          <a href="">Payments</a>
+                        </li>
+                        <li>
+                          <a href="">Log out</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="menu-item-title">
+                  <div class="" role="tab">
+                    <h5 class="msgs-title">
+                      <a href="#user_profile_msgs" role="button" data-toggle="collapse" aria-expended="false" aria-controls="user-profile">Messages</a>
+                    </h5>
+                  </div>
+                  <div id="user_profile_msgs" class="panel-collapse collapse in" role="tabpanel"  aria-labelledby="user_profile" data-toggle="collapse">
+                    <div class="list-group">
+                      <ul class="">
+                        <li>
+                          msg1
+                        </li>
+                        <li>
+                          My cvzx
+                        </li>
+                        <li>
+                          Ssdasd
+                        </li>
+                        <li>
+                         sdasdas
+                        </li>
+                        <li>
+                          asdqwe
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
             </div>
             </div>
-             <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-controls="bs-example-navbar-collapse-1">
+             <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#sidebar-accordion" aria-controls="sidebar-accordion">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Details</a></li>
+              <ul class="nav navbar-nav navbar-static-top">
+                <li><a href="#">Overview</a></li>
+                <li class="active"><a href="#">Details<span class="sr-only">(current)</span></a></li>
               </ul>
 
           </div>
