--- a/app/ui/views/details.html
+++ b/app/ui/views/details.html
@@ -32,7 +32,7 @@
 
     <div class="row">
       <nav class="navbar navbar-default">
-        <div class="col-sm-6">
+        <div class="col-md-6">
           <div class="content-header">
             <div class="collapse panel-collapse left-side-menu-wrap" data-toggle="collapse" id="sidebar-accordion" aria-labelledby="sidebar-accordion">
             <div class="left-side-menu-list" id="sidebar_menu" role="tablist" aria-multiselectable="true">
@@ -93,28 +93,68 @@
                 <div class="menu-item-title">
                   <div class="" role="tab">
                     <h5 class="msgs-title">
-                      <a href="#user_profile_msgs" role="button" data-toggle="collapse" aria-expended="false" aria-controls="user-profile">Messages</a>
+                      <a href="#user_profile_msgs" role="button" data-toggle="collapse" aria-expended="false" aria-controls="user-profile" data-spy="scroll" data-target="#user_profile_msgs">Messages</a>
                     </h5>
                   </div>
-                  <div id="user_profile_msgs" class="panel-collapse collapse in" role="tabpanel"  aria-labelledby="user_profile" data-toggle="collapse">
-                    <div class="list-group">
-                      <ul class="">
-                        <li>
-                          msg1
-                        </li>
-                        <li>
-                          My cvzx
-                        </li>
-                        <li>
-                          Ssdasd
-                        </li>
-                        <li>
-                         sdasdas
-                        </li>
-                        <li>
-                          asdqwe
-                        </li>
-                      </ul>
+                  <div id="user_profile_msgs" class="panel-collapse collapse" role="tabpanel"  aria-labelledby="user_profile_msgs" data-toggle="collapse">
+                    <div class="msgs-list-body">
+                      <div class="itinerary-list">
+                        <ul class="">
+                          <li>
+                            msg1
+                          </li>
+                          <li>
+                            My cvzx
+                          </li>
+                          <li>
+                            Ssdasd
+                          </li>
+                          <li>
+                           sdasdas
+                          </li>
+                          <li>
+                            asdqwe
+                          </li>
+                          <li>
+                            asdqwe
+                          </li>
+                          <li>
+                            asdqwe
+                          </li>
+                          <li>
+                            asdqwe
+                          </li>
+                        </ul>
+                      </div>
+
+                      <div class="contests-list">
+                        <ul class="">
+                          <li>
+                            msg1
+                          </li>
+                          <li>
+                            My cvzx
+                          </li>
+                          <li>
+                            Ssdasd
+                          </li>
+                          <li>
+                           sdasdas
+                          </li>
+                          <li>
+                            asdqwe
+                          </li>
+                          <li>
+                            asdqwe
+                          </li>
+                          <li>
+                            asdqwe
+                          </li>
+                          <li>
+                            asdqwe
+                          </li>
+                        </ul>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -136,7 +176,7 @@
 
         </div>
         
-        <div class="col-sm-3 pull-right">
+        <div class="col-md-3 pull-right">
           <span>Share this itinerary:</span>
           <button type="button" class="social-fb"></button>
           <button type="button" class="social-tw"></button>
