--- a/app/ui/styles/scss/main.scss
+++ b/app/ui/styles/scss/main.scss
@@ -1,6 +1,21 @@
+html, body{
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+#map{
+	height: calc(100% - 50px);
+	top: 50px;
+}
+
 /////////////////////////////////////header///////////////////////////////////
 
 header.container-fluid{
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 999;
 	.row{	
 
 		nav.navbar-default{
@@ -60,10 +75,12 @@ header.container-fluid{
 
 					+.navbar-toggle{
 						position: absolute;
-						top: 3px;
-						left: 360px;
+						top: -8px;
+						left: 340px;
 						color: #fff;
 						background-color: #942033;
+						padding: 21px;
+						border-radius: 0;
 						transition: right 1s ease-out 0.5s;
 						&:hover{
 							background-color: #a42338;
@@ -148,7 +165,8 @@ header.container-fluid{
 					    width: 168px;
 					    height: 28px;
 						background: url('../../../ui/uploads/header-logo.png') 3% 50% no-repeat;
-						padding: 30px 0 30px 35px;
+						padding: 25px 0 25px 35px;
+						margin-left: 30px;
 					}
 				}
 
@@ -831,7 +849,13 @@ header.container-fluid{
 		right: 6px;	
 	}
 }
-
+#details_info_pop.collapse.in{
+	position: fixed;
+	top: 150px;
+	left: 0;
+	width: 560px;
+	height: 100%;
+}
 .sidebar-wrap{
 	width: 560px;
 	height: 100%;
