--- a/app/ui/views/details.html
+++ b/app/ui/views/details.html
@@ -93,7 +93,7 @@
                 <div class="menu-item-title">
                   <div class="" role="tab">
                     <h5 class="msgs-title">
-                      <a href="#user_profile_msgs" role="button" data-toggle="collapse" aria-expended="false" aria-controls="user-profile" data-spy="scroll" data-target="#user_profile_msgs">Messages</a>
+                      <a href="#user_profile_msgs" role="button" data-toggle="collapse" aria-expended="false" aria-controls="user-profile">Messages</a>
                     </h5>
                   </div>
                   <div id="user_profile_msgs" class="panel-collapse collapse" role="tabpanel"  aria-labelledby="user_profile_msgs" data-toggle="collapse">
@@ -107,7 +107,10 @@
                             My cvzx
                           </li>
                           <li>
-                            Ssdasd
+                            Ssdasdждывлажфдывла
+                            dfasdf
+                            sdfasdf
+                            sdafasd
                           </li>
                           <li>
                            sdasdas
@@ -120,6 +123,8 @@
                           </li>
                           <li>
                             asdqwe
+                            asdfasdf
+                            sdf
                           </li>
                           <li>
                             asdqwe
@@ -133,7 +138,8 @@
                             msg1
                           </li>
                           <li>
-                            My cvzx
+                            My cvzxasdfasdfasdflkjasdklfjhsdalkfjhasdlkjfhlaskd
+                            adsgfsadf
                           </li>
                           <li>
                             Ssdasd
@@ -142,13 +148,41 @@
                            sdasdas
                           </li>
                           <li>
+                            asdqwea.fdgalds
+                          </li>
+                          <li>
+                            asdqwea.fdgalds
+                          </li>
+                          <li>
+                            asdqwea.fdgalds
+                          </li>
+                          <li>
+                            asdqwea.fdgalds
+                          </li>
+                          <li>
+                            asdqwea.fdgalds
+                          </li>
+                          <li>
+                            sadfgkahkl
                             asdqwe
                           </li>
                           <li>
+                            sadfgkahkl
                             asdqwe
                           </li>
                           <li>
+                            sadfgkahkl
                             asdqwe
+                          </li>
+                          <li>
+                            sadfgkahkl
+                            asdqwe
+                          </li>
+                          <li>
+                            assdfasdf
+                            wrtywert234
+                            __fsafd
+                            vxzcdqwe
                           </li>
                           <li>
                             asdqwe
@@ -186,7 +220,9 @@
 
   </header>
 
+      <div id="map"></div>
   <section class="container-fluid">
+
 
       <button class="btn btn-sidebar collapsed" type="button" data-toggle="collapse" data-target="#details_info_pop" data-placement="right" aria-expanded="false" aria-controls="details_info_pop">
         <i class="glyphicon glyphicon-menu-right"></i>
@@ -282,6 +318,28 @@
       </div>
 
   </section>
+    <!-- Gmaps_API: AIzaSyDgklGf56wZoKZGCYaxoC5Q6MJDf5Vat1Q -->
+    <script>
+      function initMap() {
+        var uluru = {lat: -25.363, lng: 131.044};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 4,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgklGf56wZoKZGCYaxoC5Q6MJDf5Vat1Q&callback=initMap">
+    </script>
+  <script type="text/javascript">
+    $('#user_profile_msgs').on('shown.bs.collapse', function () {
+    document.getElementById('user_profile_msgs').scrollIntoView();
+  });
+  </script>
 
 <!-- <script type="text/javascript" src="../scripts/GoogleMaps.js"></script> -->
 
