--- a/app/ui/styles/scss/main.scss
+++ b/app/ui/styles/scss/main.scss
@@ -832,7 +832,6 @@ header.container-fluid{
 
 ///////////////////////////details-sidebar/////////////////////////////////////////////////////////////////////////////////////////
 
-
 .btn-sidebar {
 	width: 20px;
 	height: 30px;
@@ -851,10 +850,11 @@ header.container-fluid{
 }
 #details_info_pop.collapse.in{
 	position: fixed;
-	top: 150px;
+	top: 50px;
 	left: 0;
 	width: 560px;
 	height: 100%;
+	background-color: #fafaf2;
 }
 .sidebar-wrap{
 	width: 560px;
