--- a/app/ui/styles/scss/main.scss
+++ b/app/ui/styles/scss/main.scss
@@ -225,18 +225,24 @@ header.container-fluid{
 								}
 							}
 							.msgs-list-body{
-								height: 100%;
+								height: 118%;
 								position: absolute;
 								left: 0;
 								overflow-y: scroll;
-								background-color: #544c37;
-  								opacity: 0.702;
+								overflow-x: hidden; 
+								background-color: #574d37;
+  								/*opacity: 0.702;*/
 								.itinerary-list{
 									border-bottom: 1px solid #5f553d;
+									p{
+										padding: 15px 0 15px 10px;
+									}
 								}
 								.contests-list{
 									border-bottom: 1px solid #5f553d;
-
+									p{
+										padding: 15px 0 15px 10px;
+									}
 								}
 								ul{
 									list-style-type: none;
@@ -830,7 +836,6 @@ header.container-fluid{
 		}
 	}
 }
-
 
 
 ///////////////////////////details-sidebar/////////////////////////////////////////////////////////////////////////////////////////
